# torchMTL

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.ipynb  simple_triple_regression.ipynb  uncertainty_weighted_loss.ipynb
tests/: test_meta_comp_graph.py
torchmtl/: __init__.py  model_builder.py  wrapping_layers.py
torchmtl/tests/: test_meta_comp_graph.py
